--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="footer bg-dark py-3 mt-auto">
     <div class="container">
-        <span class="text-muted">&copy Restaurante Barão 2021</span>
+        <span class="text-muted">&copy Cantina da Aba 2021</span>
     </div>
 </footer>
