--- a/views/clientes/all.ejs
+++ b/views/clientes/all.ejs
@@ -1,11 +1,26 @@
 <% layout('layouts/boilerplate')%>
+    <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+        <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
+            <path
+                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
+        </symbol>
+        <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
+            <path
+                d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+        </symbol>
+    </svg>
+
     <div class="row">
-        <div class="col-6 offset-3">
-            <div class="mb-3">
+        <div class="col-lg-6">
+            <div id="map" style="width: 100%; height: 300px;"></div>
+            <div class="my-3">
                 <a href="clientes/novo" class="btn btn-primary">Novo Cliente</a>
             </div>
+        </div>
 
-            <table class="table table-hover">
+        <div class="col-lg-6">
+
+            <table class="table table-sm table-responsive table-hover">
                 <thead class="table-dark">
                     <tr>
                         <th>Nome</th>
@@ -25,7 +40,16 @@
                                 </a>
                             </td>
                             <td>
-                                <%=cliente.endereco%>
+                                <% if(cliente.geometry.type!="Point" ){ %>
+                                    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img"
+                                        aria-label="Warning:">
+                                        <use xlink:href="#exclamation-triangle-fill" />
+                                    </svg>
+                                    <%} %>
+
+                                        <%=cliente.endereco%>
+
+
                             </td>
                         </tr>
                         <%}%>
@@ -33,6 +57,17 @@
             </table>
         </div>
     </div>
+
+
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.4.0/mapbox-gl.css" rel="stylesheet">
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.4.0/mapbox-gl.js"></script>
+    <script>
+        const mapToken = '<%- process.env.MAPBOX_TOKEN %>'
+        let clusterData = { features: <%- JSON.stringify(clientes.filter(x => x.geometry.type)) %>}
+
+    </script>
+    <script src="/script/clusterMap.js"></script>
+    
 
     <script>
         let trs = document.querySelectorAll('tbody>tr');
