--- a/views/erro404.ejs
+++ b/views/erro404.ejs
@@ -1,6 +1,17 @@
 <% layout('layouts/boilerplate')%>
     <div class="row">
-        <h1>404</h1>
-        <h2>Ops, algo de errado não está certo..</h2>
-        <h3>A pagina Solicitada não existe, ou não foi encontrada.</h3>
+        <div class="col-6 offset-3">
+            <h1>404</h1>
+            <h2>Ops, algo de errado não está certo..</h2>
+            <h3>A pagina solicitada não existe ou não foi encontrada.</h3>
+        </div>
+
     </div>
+    <style>
+        body {
+            color: whitesmoke;
+            background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(255, 255, 255, 0.2)),
+                url('img/pages.jpg') no-repeat bottom center fixed;
+            background-size: 100% 100%;
+        }
+    </style>
