--- a/views/erro500.ejs
+++ b/views/erro500.ejs
@@ -1,11 +1,20 @@
 <% layout('layouts/boilerplate')%>
     <div class="row">
-        <h1>
-            <%=erro.status%>
-        </h1>
-        <h2>Ops, algo de errado não está certo..</h2>
-        <p>
-            <%=erro %>
-        </p>
+        <div class="col-6 offset-3">
+            <h1>
+                <%=erro.status%>
+            </h1>
+            <h2>Ops, algo de errado não está certo..</h2>
+            <p>
+                <%=erro %>
+            </p>
 
-    </div>
+        </div>
+
+        <style>
+            body {
+                background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(100, 100, 100, 0.1)),
+                    url('img/mistake.jpg') no-repeat bottom center fixed;
+                background-size: 100% 100%;
+            }
+        </style>
