--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,16 +1,23 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Restaurante Barão</a>
+        <a class="navbar-brand" href="/">Cantina da Aba</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link" href="/">Home</a>
                 <a class="nav-link" href="/clientes">Clientes</a>
                 <a class="nav-link" href="/pedidos">Pedidos</a>
                 <a class="nav-link" href="/pedidos/novo">Novo pedido</a>
+            </div>
+            <div class="navbar-nav ms-auto">
+                <% if(!user){ %>
+                    <a class="nav-link" href="/login">Login</a>
+                    <% }else{ %>
+                        <a class="nav-link" href="/logout">Logout</a>
+                        <a class="nav-link" href="/registrar">Registrar</a>
+                        <% } %>
             </div>
         </div>
     </div>
