--- a/views/pedidos/novo.ejs
+++ b/views/pedidos/novo.ejs
@@ -1,100 +1,114 @@
 <% layout('layouts/boilerplate')%>
-    <div class="row ">
-        <div class="col-8 offset-2">
-            <h1 class="text-center">Novo pedido</h1>
 
-            <form action="/pedidos" method="POST" class="validated-form mb-3">
+    <form action="/pedidos" method="POST" class="validated-form mb-3 row">
+        <h1 class="text-center">Novo pedido</h1>
+        <div class="col-lg-6 ">
+            <h2 class="text-center">Cliente</h2>
 
-                <div class="d-flex justify-content-evenly p-3">
 
-                    <input type="radio" class="btn-check" name="entrega" id="balcao" autocomplete="off" value="balcão"
-                        checked>
-                    <label class="btn btn-outline-success btn-lg" for="balcao">Balcão</label>
-                    <input type="radio" class="btn-check" name="entrega" id="delivery" autocomplete="off"
-                        value="delivery">
-                    <label class="btn btn-outline-danger btn-lg" for="delivery">Delivery</label>
+
+            <div class="d-flex justify-content-evenly p-3">
+
+                <input type="radio" class="btn-check" name="entrega" id="balcao" autocomplete="off" value="balcão"
+                    required>
+                <label class="btn btn-outline-success btn-lg" for="balcao">Balcão</label>
+                <input type="radio" class="btn-check" name="entrega" id="delivery" autocomplete="off" value="delivery">
+                <label class="btn btn-outline-danger btn-lg" for="delivery">Delivery</label>
+            </div>
+
+
+
+            <div class="mb-3">
+
+                <label for="q">Cliente</label>
+                <input class="form-control dropdown mt-1" type="text" id="q" name="cliente[nome]"
+                    placeholder="Telefone ou nome" autofocus>
+                <ul class="dropdown-menu " aria-labelledby="dropdownMenu2">
+                </ul>
+
+            </div>
+            <div class="contato-info d-none">
+
+
+                <div class="input-group mb-3 ">
+
+                    <span class="input-group-text">Telefone</span>
+                    <input class="form-control" disabled type="text" id="telefone" name="cliente[telefone]"
+                        placeholder="Apenas numeros, com ddd" style="width: 50%;">
                 </div>
-
-
-
-                <div class="mb-3">
-
-                    <label for="q">Cliente</label>
-                    <input class="form-control dropdown" type="text" id="q" name="cliente[nome]"
-                        placeholder="Telefone ou nome">
-                    <ul class="dropdown-menu " aria-labelledby="dropdownMenu2">
-                    </ul>
-
-                </div>
-                <div class="contato-info d-none">
-
-                    <div class="input-group mb-3">
-
-                        <span class="input-group-text">Telefone</span>
-                        <input class="form-control" disabled type="text" id="telefone" name="cliente[telefone]"
-                            placeholder="Apenas numeros, com ddd" style="width: 50%;">
-                        <div class="invalid-feedback">
-                            Por favor, numero com ddd no formato 41999995555
-                        </div>
-                        <span class="input-group-text">Frete</span>
-                        <span class="input-group-text">R$</span>
-                        <input class="form-control" disabled type="number" id="frete" name="cliente[frete]"
-                            placeholder="Preço frete">
-                    </div>
-                    <div class="input-group mb-3">
-                        <span class="input-group-text">Endereço</span>
-                        <input class="form-control" disabled type="text" id="endereco" name="cliente[endereco]"
-                            placeholder="Completo, com ponto de referencia">
-
-
-                    </div>
-                    <div class="mb-3 d-inline">
-                        <button id="edit" class="btn btn-primary">Editar</button>
-                    </div>
+                <div class="input-group mb-3">
+                    <span class="input-group-text">Endereço</span>
+                    <input class="form-control" disabled type="text" id="endereco" name="cliente[endereco]"
+                        placeholder="Completo, com ponto de referencia">
 
                 </div>
-
-                <h3 class="text-center">Pedido</h3>
-
-                <div class="d-flex justify-content-evenly itens mb-3">
-                    <button type="button" id="m_p" class="btn btn btn-primary">Marmita P</button>
-                    <button type="button" id="m_m" class="btn btn btn-primary">Marmita M</button>
-                    <button type="button" id="m_g" class="btn btn btn-primary">Marmita G</button>
-                    <button type="button" id="m_o" class="btn btn btn-primary">Outro</button>
+                <div class="input-group mb-3">
+                    <span class="input-group-text">Frete</span>
+                    <span class="input-group-text">R$</span>
+                    <input class="form-control" step="0.01" disabled type="number" id="frete" name="cliente[frete]"
+                        placeholder="Preço frete">
                 </div>
+                <input type="hidden" id="id" name="cliente[_id]" disabled>
 
+            </div>
+            <h2 class="text-center">Pagamento</h2>
+            <div class="d-flex justify-content-evenly my-4">
+                <div class="d-flex flex-column">
+                    <input type="radio" class="btn-check" name="pagamento[metodo]" id="dinheiro" value="dinheiro"
+                        required>
+                    <label class="btn btn-outline-success " for="dinheiro">Dinheiro</label>
 
-                <div class="pedidos mb-3">
+                    <button class="btn btn-outline-success btn-sm mt-1 d-none" id="troco" type="button">Troco</button>
 
-                </div>
-
-                <div class="d-flex justify-content-evenly mb-5">
-                    <div>
-                        <input type="radio" class="btn-check" name="pagamento[metodo]" id="dinheiro" autocomplete="off"
-                            value="dinheiro" checked>
-                        <label class="btn btn-outline-success " for="dinheiro">Dinheiro</label>
+                    <div class="input-group mb-3 d-none mt-1">
+                        <!-- <span class="input-group-text">R$</span> -->
+                        <input type="number" step="0.01" min="1" max="200" disabled name="pagamento[trocopara]"
+                            class="mt-1 form-control" id="trocopara" placeholder="Troco para">
                     </div>
 
-                    <div>
-                        <input type="radio" class="btn-check" name="pagamento[metodo]" id="pix" autocomplete="off"
-                            value="pix">
-                        <label class="btn btn-outline-success " for="pix">Pix</label>
-                    </div>
-                    <div>
-                        <input type="radio" class="btn-check" name="pagamento[metodo]" id="cartao" autocomplete="off"
-                            value="cartão">
-                        <label class="btn btn-outline-success " for="cartao">Cartão</label>
-                    </div>
 
                 </div>
 
-                <div class="d-flex justify-content-evenly">
-                    <button id="fechar" disabled class="btn btn-lg btn-primary ">Fechar Pedido</button>
+                <div>
+                    <input type="radio" class="btn-check" name="pagamento[metodo]" id="pix" autocomplete="off"
+                        value="pix">
+                    <label class="btn btn-outline-success " for="pix">Pix</label>
+                </div>
+                <div>
+                    <input type="radio" class="btn-check" name="pagamento[metodo]" id="cartao" autocomplete="off"
+                        value="cartão">
+                    <label class="btn btn-outline-success " for="cartao">Cartão</label>
                 </div>
 
-            </form>
+            </div>
+
         </div>
-    </div>
+        <div class="col-lg-6 ">
+            <h2 class="text-center">Pedido</h2>
+
+            <div class="d-flex flex-wrap justify-content-evenly itens mb-3">
+                <button type="button" id="m_p" class="btn btn btn-primary mb-2">Marmita P</button>
+                <button type="button" id="m_m" class="btn btn btn-primary mb-2">Marmita M</button>
+                <button type="button" id="m_g" class="btn btn btn-primary mb-2">Marmita G</button>
+                <button type="button" id="buf" class="btn btn btn-primary mb-2">Buffet</button>
+                <button type="button" id="m_o" class="btn btn btn-primary mb-2">Outro</button>
+            </div>
+
+
+            <div class="pedidos mb-3">
+
+            </div>
+
+
+
+        </div>
+
+
+
+        <div class="d-flex justify-content-evenly mb-2">
+            <button id="fechar" disabled class="btn btn-lg btn-primary ">Fechar Pedido</button>
+        </div>
+    </form>
 
     <script>
         let dropdown = document.querySelector(".dropdown-menu");
@@ -120,14 +134,16 @@
                 document.querySelector("#telefone").value = contato.telefone;
                 document.querySelector("#endereco").value = contato.endereco;
                 document.querySelector("#frete").value = contato.frete;
+                document.querySelector("#id").disabled = false
+                document.querySelector("#id").value = contato._id;
                 // document.querySelectorAll("div.contato-info").forEach(div => div.classList.remove("d-none"));
             }
             dropdown.append(item)
 
         }
 
-        additem('<a class="dropdown-item" id="novocontato" type="button"><span class="p-1">+ Novo Contato</span></a>', true);
-        additem('    <hr class="dropdown-divider">', false);
+        //additem('<a class="dropdown-item" id="novocontato" type="button"><span class="p-1">+ Novo Contato</span></a>', true);
+        // additem('    <hr class="dropdown-divider">', false);
         let y = async function () {
             let el = document.querySelector('#q');
             for (let e of document.querySelectorAll(".dropdown-menu > li .contato")) {
@@ -138,6 +154,10 @@
 
                 if (!res.length)
                     additem('<button class="dropdown-item disabled contato"href="#" tabindex="-1" aria-disabled="true">Sem Resultados</button >', false)
+                else if (res.length >= 6) {
+                    res = res.slice(0, 5)
+                    additem('<button class="dropdown-item disabled contato text-center"href="#" tabindex="-1" aria-disabled="true"><span class="p-5">...</span></button >', false)
+                }
 
                 res.forEach(contato => {
                     addcontato(contato);
@@ -148,11 +168,8 @@
 
             }
 
-
-
             el.oninput = x;
             dropdown.classList.add("show");
-
 
         }
         let x = function () {
@@ -167,21 +184,21 @@
             setTimeout(() => dropdown.classList.remove("show"), 350);
         };
 
-        document.querySelector("#edit").onclick = function () {
-            this.disabled = true;
-            document.querySelectorAll(".contato-info  input").forEach(input => input.disabled = false)
-        }
-        document.querySelector("#novocontato").onclick = function () {
-            //document.querySelectorAll("div.contato-info").forEach(div => div.classList.remove("d-none"));
-            document.querySelector("#q").placeholder = "Nome e sobrenome";
-            document.querySelector("#telefone").value = 41;
-            document.querySelector("#edit").onclick();
-
-        }
+        // document.querySelector("#edit").onclick = function () {
+        //     this.disabled = true;
+        //     document.querySelectorAll(".contato-info  input").forEach(input => input.disabled = false)
+        // }
+        /* document.querySelector("#novocontato").onclick = function () {
+             //document.querySelectorAll("div.contato-info").forEach(div => div.classList.remove("d-none"));
+             document.querySelector("#q").placeholder = "Nome e sobrenome";
+             document.querySelector("#telefone").value = 41;
+             document.querySelector("#edit").onclick();
+ 
+         }*/
         // let comandaitem = document.querySelector(".pedido").cloneNode(true);
         // document.querySelector(".pedido").remove();
         let i = 0;
-        let comandaAdd = function (marmita, preco = 0) {
+        let comandaAdd = function (item, preco = 0) {
             let template = `<div class="pedido card p-2 d-flex flex-row flex-nowrap justify-content-evenly">
                             <div class="flex-grow-1">
                                 <div class="input-group mb-1">
@@ -193,28 +210,32 @@
                                         <option value="Marmita P">
                                         <option value="Marmita M">
                                         <option value="Marmita G">
+                                        <option value="Buffet">
                                         <option value="Outros">
                                     </datalist>
                                  
                                     <input name="itens[${i}][prot]" style="width:25%" class="form-control proteina" list="listProteinas"
                                         id="Proteinas" placeholder="Proteina..">
                                     <datalist id="listProteinas">
-                                        <option value="Bisteca">
+                                        <option value="Bisteca Milanesa">
+                                        <option value="Bisteca Grelhada">
                                         <option value="Peito Grelhado">
                                         <option value="Peito Milanesa">
+                                        <option value="Porco no Tacho">
+                                        <option value="Figado Acebolado">
                                         <option value="Outros">
                                     </datalist>
 
                                 </div>
                                 <div class="input-group">
                                     <input name="itens[${i}][obs]" style="width:50%" type="text" class="form-control obs"
-                                        placeholder="Observações"  value="Completa">
-                                    <span class="input-group-text mb-8">Valor Und. R$</span>
-                                    <input name="itens[${i}][valor]" type="number" class="form-control preco">
+                                        placeholder="Observações"  onClick="this.select();" value="Completa">
+                                    <span class="input-group-text mb-8">R$</span>
+                                    <input name="itens[${i}][valor]" type="number" step="0.01" min="0" class="form-control preco">
                                 </div>
 
                             </div>
-                            <button type="button" class="delete btn btn-outline-danger flex-grow-3">
+                            <button type="button" class="delete btn btn-outline-danger flex-grow-2">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
                                     class="bi bi-trash" viewBox="0 0 16 16">
                                     <path
@@ -232,8 +253,10 @@
             let cont = document.querySelector('.pedidos');
             let element = document.createElement('div')
             element.innerHTML = template;
-            element.querySelector(".marmita").value = marmita
+            element.querySelector(".marmita").value = item
             element.querySelector(".preco").value = preco
+            if (item.indexOf("Marmita") < 0)
+                element.querySelector(".obs").value = ''
             element.querySelector(".delete").onclick = function () {
                 this.parentElement.remove()
             }
@@ -246,21 +269,23 @@
         document.querySelector("#m_p").onclick = () => comandaAdd('Marmita P', 7)
         document.querySelector("#m_m").onclick = () => comandaAdd('Marmita M', 10)
         document.querySelector("#m_g").onclick = () => comandaAdd('Marmita G', 13)
+        document.querySelector("#buf").onclick = () => comandaAdd('Buffet', 11.90)
         document.querySelector("#m_o").onclick = () => comandaAdd('Outros')
 
-        document.querySelector("#fechar").onclick = () => {
-            // document.querySelectorAll(".contato-info input").forEach(el => el.disabled = false)
-        }
+        // document.querySelector("#fechar").onclick = () => {
+        //     document.querySelector('form').onsubmit() 
+        //     // document.querySelectorAll(".contato-info input").forEach(el => el.disabled = false)
+        // }
 
         document.querySelector("#delivery").onclick = () => {
-            document.querySelectorAll(".contato-info input").forEach(el => {
+            document.querySelectorAll(".contato-info input:not(#id)").forEach(el => {
                 el.required = true
                 el.disabled = false
             })
             document.querySelectorAll("div.contato-info").forEach(div => div.classList.remove("d-none"));
         }
         document.querySelector("#balcao").onclick = () => {
-            document.querySelectorAll(".contato-info input").forEach(el => {
+            document.querySelectorAll(".contato-info input:not(#id)").forEach(el => {
                 el.required = false
                 el.disabled = true
             })
@@ -271,6 +296,45 @@
         document.querySelector('form').onsubmit = () => {
             btn.disabled = true;
             btn.innerText = "Processando..."
+        }
+
+        document.querySelectorAll("input[name='pagamento[metodo]']").forEach(x => {
+            if (x.value == 'dinheiro') {
+                x.oninput = function () {
+                    const troco = document.querySelector('#troco')
+                    const inpt = document.querySelector('#trocopara')
+                    troco.classList.remove('d-none')
+                    troco.classList.add('btn-outline-success')
+                    troco.classList.remove('btn-success')
+                    inpt.disabled = true;
+                    inpt.required = false;
+                    inpt.parentNode.classList.add('d-none')
+
+                }
+
+            } else {
+                x.oninput = function () {
+                    const troco = document.querySelector('#troco')
+                    const inpt = document.querySelector('#trocopara')
+                    troco.classList.add('d-none')
+                    troco.classList.add('btn-outline-success')
+                    troco.classList.remove('btn-success')
+                    inpt.disabled = true;
+                    inpt.required = false;
+                    inpt.parentNode.classList.add('d-none')
+
+                }
+            }
+        })
+
+        document.querySelector('#troco').onclick = function () {
+            this.classList.toggle('btn-outline-success')
+            this.classList.toggle('btn-success')
+            const inpt = document.querySelector('#trocopara')
+            inpt.disabled = !inpt.disabled;
+            inpt.required = inpt.disabled;
+            inpt.parentNode.classList.toggle('d-none')
+            inpt.focus();
         }
 
 
