--- a/views/clientes/all.ejs
+++ b/views/clientes/all.ejs
@@ -36,7 +36,7 @@
                             </td>
                             <td>
                                 <a href="whatsapp://send?phone=55<%=cliente.telefone%>&text=Oi+<%=cliente.nome%>">
-                                    <%=cliente.telefone.slice(2)%>
+                                    <%=cliente.telefone%>
                                 </a>
                             </td>
                             <td>
