--- a/views/erro500.ejs
+++ b/views/erro500.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate')%>
     <div class="row">
-        <div class="col-6 offset-3">
+        <div class="col-lg-6 offset-lg-3">
             <h1>
                 <%=erro.status%>
             </h1>
