--- a/views/erro500.ejs
+++ b/views/erro500.ejs
@@ -13,8 +13,7 @@
 
         <style>
             body {
-                background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(100, 100, 100, 0.1)),
-                    url('img/mistake.jpg') no-repeat bottom center fixed;
+                background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(100, 100, 100, 0.5))
                 background-size: 100% 100%;
             }
         </style>
