--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,2 +1,11 @@
 <% layout('layouts/boilerplate')%>
-    <h1>Bem vindo ! Home page</h1>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.5.1/dist/chart.min.js"></script>
+    <!-- <h1 class="text-center">Bem vindo ! Home page</h1> -->
+    <div class="row">
+        <div class="col-lg-6">
+            <iframe
+                style="background: #21313C;border: none;border-radius: 2px;box-shadow: 0 2px 10px 0 rgba(70, 76, 79, .2);"
+                width="100%" height="480"
+                src="https://charts.mongodb.com/charts-project-0-tvodc/embed/charts?id=914e5c9d-4ad3-4ef4-b1fb-ab3874ffe9b6&autoRefresh=1800&theme=dark"></iframe>
+        </div>
+    </div>
