--- a/views/pedidos/all.ejs
+++ b/views/pedidos/all.ejs
@@ -1,4 +1,5 @@
 <% layout('layouts/boilerplate')%>
+<link rel="stylesheet" href="/styles/metodos.css">
     <div class="row">
         <div class="col-lg-4">
             <!-- <div class=" d-lg-none">
@@ -23,16 +24,16 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <% for(let i in pedidosIndex){ %>
+                    <% for(let i in produtosTotais){ %>
                         <tr>
+                            <th>
+                                <%=i.capitalize()%>
+                            </th>
                             <td>
-                                <%=i%>
+                                <%=produtosTotais[i].qty %>
                             </td>
                             <td>
-                                <%=pedidosIndex[i].qty %>
-                            </td>
-                            <td>
-                                R$<%=pedidosIndex[i].valor %>
+                                R$<%=produtosTotais[i].valor.toFixed(2) %>
                             </td>
 
                         </tr>
@@ -42,39 +43,31 @@
             <script>
                 let pedidos = <%- JSON.stringify(pedidos) %>
             </script>
-            <table class="table table-sm  mb-3">
+            <table class="table table-sm mb-3">
                 <thead>
-                    <th colspan="100%">
-                        Totais por pagamento
-                    </th>
+                    <tr>
+                        <th colspan="100%">
+                            Totais por Metodo de Pagamento
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>Metodo</th>
+                        <th>Total</th>
+                    </tr>
                 </thead>
                 <tbody>
+                    <% for(let i in pagamentosTotais){ %>
+                        <tr>
+                            <th>
+                                <%=i.capitalize()%>
+                            </th>
+                            <td>
+                                R$<%=pagamentosTotais[i].toFixed(2) %>
+                            </td>
 
-                    <tr>
-                        <th>Dinheiro</th>
-                        <td>R$<%=pedidos.filter(x=> x.pagamento.metodo == "dinheiro").map(x=>
-                                x.pagamento.total).reduce((total,n)=> total+n,0)%></td>
-                    </tr>
-                    <tr>
-                        <th>Cartão</th>
-                        <td>R$<%=pedidos.filter(x=> x.pagamento.metodo == "cartão").map(x=>
-                                x.pagamento.total).reduce((total,n)=> total+n,0)%></td>
-                    </tr>
-                    <tr>
-                        <th>Pix</th>
-                        <td>R$<%=pedidos.filter(x=> x.pagamento.metodo == "pix").map(x=>
-                                x.pagamento.total).reduce((total,n)=> total+n,0)%> </td>
-                    </tr>
-                    <tr>
-                        <th>Total Entregas</th>
-                        <td>R$<%=pedidos.map(i=> i.cliente.frete).reduce( (total,num) => total+num,0)%></td>
-                    </tr>
-                    <tr>
-                        <th>Total</th>
-                        <td>R$<%=pedidos.map(i=> i.pagamento.total).reduce( (total,num) => total+num,0)%></td>
-                    </tr>
+                        </tr>
+                        <% } %>
                 </tbody>
-
             </table>
 
         </div>
@@ -113,7 +106,12 @@
                                 pedido.status
                             </td> -->
                                 <td>
-                                    <%=pedido.cliente.nome%>
+                                    <% if(pedido.cliente._id){ %> 
+                                        <a href="/clientes/<%=pedido.cliente._id%>"> <%=pedido.cliente.nome%></a>
+                                    <%}else{%>
+                                        <%=pedido.cliente.nome%>
+                                    <%}%>
+                                   
                                 </td>
                                 <td class="d-none d-lg-block">
                                     <%if(pedido.entrega=="delivery"){%>
@@ -150,5 +148,5 @@
 
         </div>
     </div>
-    <link rel="stylesheet" href="/styles/metodos.css">
+    
     <%- include('../partials/tables')%>
