New DBscripts and clientes and pedidos schema

--- a/views/clientes/cliente.ejs
+++ b/views/clientes/cliente.ejs
@@ -77,7 +77,7 @@
                     </tr>
                 </thead>
                 <tbody class="pedidos">
-                    <% for(let pedido of pedidos){%>
+                    <% for(let pedido of cliente.pedidos){%>
                         <tr data-url="/pedidos/<%=pedido._id%>">
 
                             <td>
