--- a/views/pedidos/all.ejs
+++ b/views/pedidos/all.ejs
@@ -1,4 +1,8 @@
 <% layout('layouts/boilerplate')%>
+    <script>
+        let pedidos = <% - JSON.stringify(pedidos) %>
+    </script>
+    <link rel="stylesheet" href="/styles/metodos.css">
     <div class="row">
         <div class="col-lg-4">
             <!-- <div class=" d-lg-none">
@@ -9,79 +13,70 @@
                 <input type="date" name="data" id="data" value="<%=data%>">
                 <button class="btn btn-primary ">Filtrar</button>
             </form>
-            <table class="table table-sm mb-3">
-                <thead>
-                    <tr>
-                        <th colspan="100%">
-                            Totais por produto
-                        </th>
-                    </tr>
-                    <tr>
-                        <th>Produto</th>
-                        <th>Qty</th>
-                        <th>Total</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <% for(let i in pedidosIndex){ %>
+            <% if(pedidos.length){ %>
+                <table class="table table-sm mb-3">
+                    <thead>
                         <tr>
-                            <td>
-                                <%=i%>
-                            </td>
-                            <td>
-                                <%=pedidosIndex[i].qty %>
-                            </td>
-                            <td>
-                                R$<%=pedidosIndex[i].valor %>
-                            </td>
-
+                            <th colspan="100%">
+                                Totais por produto
+                            </th>
                         </tr>
-                        <% } %>
-                </tbody>
-            </table>
-            <script>
-                let pedidos = <%- JSON.stringify(pedidos) %>
-            </script>
-            <table class="table table-sm  mb-3">
-                <thead>
-                    <th colspan="100%">
-                        Totais por pagamento
-                    </th>
-                </thead>
-                <tbody>
+                        <tr>
+                            <th>Produto</th>
+                            <th>Qty</th>
+                            <th>Total</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% for(let i in produtosTotais){ %>
+                            <tr>
+                                <th>
+                                    <%=i.capitalize()%>
+                                </th>
+                                <td>
+                                    <%=produtosTotais[i].qty %>
+                                </td>
+                                <td>
+                                    R$<%=produtosTotais[i].valor.toFixed(2) %>
+                                </td>
 
-                    <tr>
-                        <th>Dinheiro</th>
-                        <td>R$<%=pedidos.filter(x=> x.pagamento.metodo == "dinheiro").map(x=>
-                                x.pagamento.total).reduce((total,n)=> total+n,0)%></td>
-                    </tr>
-                    <tr>
-                        <th>Cartão</th>
-                        <td>R$<%=pedidos.filter(x=> x.pagamento.metodo == "cartão").map(x=>
-                                x.pagamento.total).reduce((total,n)=> total+n,0)%></td>
-                    </tr>
-                    <tr>
-                        <th>Pix</th>
-                        <td>R$<%=pedidos.filter(x=> x.pagamento.metodo == "pix").map(x=>
-                                x.pagamento.total).reduce((total,n)=> total+n,0)%> </td>
-                    </tr>
-                    <tr>
-                        <th>Total Entregas</th>
-                        <td>R$<%=pedidos.map(i=> i.cliente.frete).reduce( (total,num) => total+num,0)%></td>
-                    </tr>
-                    <tr>
-                        <th>Total</th>
-                        <td>R$<%=pedidos.map(i=> i.pagamento.total).reduce( (total,num) => total+num,0)%></td>
-                    </tr>
-                </tbody>
+                            </tr>
+                            <% } %>
+                    </tbody>
+                </table>
 
-            </table>
+                <table class="table table-sm mb-3">
+                    <thead>
+                        <tr>
+                            <th colspan="100%">
+                                Totais por Metodo de Pagamento
+                            </th>
+                        </tr>
+                        <tr>
+                            <th>Metodo</th>
+                            <th>Total</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% for(let i in pagamentosTotais){ %>
+                            <tr>
+                                <th>
+                                    <%=i.capitalize()%>
+                                </th>
+                                <td>
+                                    R$<%=pagamentosTotais[i].toFixed(2) %>
+                                </td>
+
+                            </tr>
+                            <% } %>
+                    </tbody>
+                </table>
+                <% }else{ %>
+                    <h6>Nenhum pedido nessa data...</h6>
+                    <% } %>
 
         </div>
         <div class="col-lg-8 ">
-
-
-
             <table class="table table-sm table-responsive table-hover ">
 
                 <thead class="table-dark">
@@ -113,7 +108,14 @@
                                 pedido.status
                             </td> -->
                                 <td>
-                                    <%=pedido.cliente.nome%>
+                                    <% if(pedido.cliente._id){ %>
+                                        <a href="/clientes/<%=pedido.cliente._id%>">
+                                            <%=pedido.cliente.nome%>
+                                        </a>
+                                        <%}else{%>
+                                            <%=pedido.cliente.nome%>
+                                                <%}%>
+
                                 </td>
                                 <td class="d-none d-lg-block">
                                     <%if(pedido.entrega=="delivery"){%>
@@ -133,7 +135,7 @@
                                     <%=pedido.pagamento.metodo%>
                                 </td>
                                 <td>
-                                    R$<%=pedido.pagamento.total%>
+                                    R$<%=pedido.pagamento.total.toFixed(2)%>
                                 </td>
 
                             </tr>
@@ -150,5 +152,5 @@
 
         </div>
     </div>
-    <link rel="stylesheet" href="/styles/metodos.css">
+
     <%- include('../partials/tables')%>
