--- a/views/erro404.ejs
+++ b/views/erro404.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate')%>
     <div class="row">
-        <div class="col-6 offset-3">
+        <div class="col-lg-6 offset-lg-3">
             <h1>404</h1>
             <h2>Ops, algo de errado não está certo..</h2>
             <h3>A pagina solicitada não existe ou não foi encontrada.</h3>
