--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,7 +7,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
+                <a class="nav-link" href="/produtos">Produtos</a>
                 <a class="nav-link" href="/clientes">Clientes</a>
+                <a class="nav-link" href="/pagamentos">Pagamentos</a>
                 <a class="nav-link" href="/pedidos">Pedidos</a>
                 <a class="nav-link" href="/pedidos/novo">Novo pedido</a>
             </div>
