+ pagamento.metodo = 'pendente'

--- a/views/pedidos/novo.ejs
+++ b/views/pedidos/novo.ejs
@@ -84,7 +84,7 @@
                 </div>
                 <div>
                     <input type="radio" class="btn-check" name="pagamento[metodo]" id="pendente" autocomplete="off"
-                        value="" checked>
+                        value="pendente" checked>
                     <label class="btn btn-outline-secondary " for="pendente">Em aberto</label>
                 </div>
 
