--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.5.1/dist/chart.min.js"></script>
     <!-- <h1 class="text-center">Bem vindo ! Home page</h1> -->
     <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-6 col-lg-12">
             <iframe
                 style="background: #21313C;border: none;border-radius: 2px;box-shadow: 0 2px 10px 0 rgba(70, 76, 79, .2);"
                 width="100%" height="480"
