--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,17 +7,18 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link" href="/produtos">Produtos</a>
                 <a class="nav-link" href="/clientes">Clientes</a>
-                <a class="nav-link" href="/pagamentos">Pagamentos</a>
                 <a class="nav-link" href="/pedidos">Pedidos</a>
                 <a class="nav-link" href="/pedidos/novo">Novo pedido</a>
+                <!-- <a class="nav-link" href="/pagamentos">Pagamentos</a>                
+                <a class="nav-link" href="/produtos">Produtos</a> -->
             </div>
             <div class="navbar-nav ms-auto">
                 <% if(!user){ %>
                     <a class="nav-link" href="/login">Login</a>
                     <% }else{ %>
                         <a class="nav-link" href="/logout">Logout</a>
+                        <!-- <a class="nav-link" href="/usuarios">Usuarios</a> -->
                         <a class="nav-link" href="/registrar">Registrar</a>
                         <% } %>
             </div>
